--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -28,13 +28,31 @@
     // Array.prototype.some() // is at least one person 19 or older?
     // Array.prototype.every() // is everyone 19 or older?
 
+    // const isAdult = people.some(function(person) {
+    //   const currentYear = (new Date()).getFullYear();
+    //   if (currentYear - person.year > 18) {
+    //     return true;
+    //   };
+    // })
+
+    const isAdult = people.every( (person) => (new Date()).getFullYear() - person.year >= 19);
+
+    console.log(isAdult);
+
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    const comment = comments.find( (comm) => comm.id === 823423);
+    console.log(comment);
+
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+
+    const commentId = comments.findIndex( (comm) => comm.id === 823423)
+
+    console.log(commentId);
 
   </script>
 </body>
