08 html5 canvas - add event listener to draw canvas

--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -23,6 +23,11 @@ let lastY = 0;
 let hue = 0;
 let direction = true;
 
+
+canvas.addEventListener('mousedown', (e) => {
+  isDrawing = true;
+  [lastX, lastY] = [e.offsetX, e.offsetY];
+});
 </script>
 
 <style>
